# disckit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: update-dependencies.yml
disckit/: __init__.py  config.py
disckit/cogs/: loader.py
disckit/cogs/worker/: __init__.py  error_handler.py
disutil/: __init__.py  config.py  errors.py
disutil/cogs/: __init__.py  loader.py
disutil/cogs/worker/: __init__.py  error_handler.py  status_handler.py
disutil/utils/: __init__.py  embeds.py
disutils/: __init__.py  config.py  errors.py
disutils/cogs/: __init__.py  loader.py
disutils/cogs/worker/: error_handler.py  status_handler.py
disutils/utils/: __init__.py  embeds.py
src/disckit/: __init__.py  config.py  errors.py  paginator.py
src/disckit/cogs/: __init__.py  loader.py
src/disckit/cogs/commands/: help.py
src/disckit/cogs/worker/: __init__.py  error_handler.py  owner_id_handler.py  owner_ids  owner_ids.py  owner_ids_handler.py  status_handler.py
src/disckit/utils/: __init__.py  cooldown.py  embeds.py  paginator.py  translator.py  ui.py
